tests/baselines/reference/es5-asyncFunctionForStatements(strict=true).errors.txt
es5-asyncFunctionForStatements.ts(1,13): error TS7005: Variable 'x' implicitly has an 'any' type.
es5-asyncFunctionForStatements.ts(1,16): error TS7005: Variable 'y' implicitly has an 'any' type.
es5-asyncFunctionForStatements.ts(1,19): error TS7005: Variable 'z' implicitly has an 'any' type.
es5-asyncFunctionForStatements.ts(1,22): error TS7005: Variable 'a' implicitly has an 'any' type.
es5-asyncFunctionForStatements.ts(1,25): error TS7005: Variable 'b' implicitly has an 'any' type.
es5-asyncFunctionForStatements.ts(1,28): error TS7005: Variable 'c' implicitly has an 'any' type.


==== es5-asyncFunctionForStatements.ts (6 errors) ====
    declare var x, y, z, a, b, c;
                ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                   ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
                            ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
                               ~
!!! error TS7005: Variable 'c' implicitly has an 'any' type.
    
    async function forStatement0() {
        for (x; y; z) { a; }
    }
    
    async function forStatement1() {
        for (await x; y; z) { a; }
    }
    
    async function forStatement2() {
        for (x; await y; z) { a; }
    }
    
    async function forStatement3() {
        for (x; y; await z) { a; }
    }
    
    async function forStatement4() {
        for (x; y; z) { await a; }
    }
    
    async function forStatement5() {
        for (var b; y; z) { a; }
    }
    
    async function forStatement6() {
        for (var c = x; y; z) { a; }
    }